# databricks-ex

./: .databricks.env.template  .gitignore  README.md  databricks-cli.url  databricks-host.txt  token.txt
ingestion/: .env.template  .gitignore  00-create-volume.sh  01-copy-local-data-to-volume.sh  02-insert.json  02-insert.sh  02-insert.sql  02.01-create-table-as.sh  02.02-copy-into.json  02.02-copy-into.sh  02.02-copy-into.sql  03-verify-pyspark.py  03-verify-sql.py  03-verify.json  03-verify.py  03-verify.sh  README.md  data.csv  data.parquet  go.mod  ingest_with_python.py  main.go  pyproject.toml
json/: 00-create-volume.sh  02-copy-local-data-to-volume.sh  06.01-export-ws-py.sh  99-clean.sh  README.md  data.decoded.json  data.decoded.schema  data.json  data.json.array  data.json.single  json.py
merge/: .env  02-copy-local-data-to-volume.sh  03-create-tables.sh  03-create-workspace.sh  06.01-export-ws-py.sh  merge_notebook.py  source_table.csv  target_table.csv
rescue/: .gitignore  00-create-volume.sh  02-copy-local-data-to-volume.sh  03-copy-local-data-to-volume.sh  06.01-export-ws-py.sh  README.md  data-missing-header.csv  data.csv  go.mod  main.go  out.txt  rescue.wspy
streaming/: 00-create-volume.sh  01.01-convert.sh  02-copy-local-data-to-volume.sh  03-create-workspace.sh  04-create-pipeline.sh  05-verify.py  06-export-ws.sh  06.01-export-ws-py.sh  06.02-export-ws-sql.sh  99-clean.sh  README.md  data.csv  data.parquet  go.mod  go.sum  main.go  metadata.wspy  metadata.wsql  pyproject.toml  streaming.json  streaming.sql
