[project]
name = "ingestion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks>=0.2",
    "databricks-api>=0.9.0",
    "python-dotenv>=1.2.1",
    "databricks-sdk>=0.28.0",
]


[tool.basedpyright]
typeCheckingMode = "strict"
ignore = ["**/__pycache__"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "black>=25.11.0",
]
